--- a/package.json
+++ b/package.json
@@ -13,21 +13,29 @@
     "@clerk/nextjs": "^4.28.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@nextui-org/react": "^2.3.6",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
     "axios": "^1.6.2",
+    "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.3.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "commander": "^11.1.0",
+    "firebase": "^10.12.4",
+    "framer-motion": "^11.3.8",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.295.0",
-    "next": "14.0.4",
+    "next": "^14.2.5",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "react-speech-recognition": "^3.10.0",
+    "react-typed": "^2.0.12",
     "regenerator-runtime": "^0.14.1",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7"
@@ -35,6 +43,9 @@
   "devDependencies": {
     "@babel/core": "^7.23.6",
     "@babel/preset-env": "^7.23.6",
+    "@types/body-parser": "^1.19.5",
+    "@types/node": "20.14.11",
+    "@types/react": "18.3.3",
     "@types/react-dom": "^18",
     "@types/react-speech-recognition": "^3.9.5",
     "@types/regenerator-runtime": "^0.13.5",
@@ -42,6 +53,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "typescript": "5.5.3"
   }
 }
