feat: Redesign chat page with collapsible sidebar, mobile responsiveness, and improved UI
- Add collapsible sidebar with document management
- Add mobile-responsive hamburger menu with Sheet component
- Add stop generation button for ongoing queries
- Add source selection dropdown (Database/Internet/Both)
- Add file upload with status indicators
- Add copy/voice playback for responses
- Add site.webmanifest for PWA support
- Add markdown renderer and source citation components
- Fix container positioning for framer-motion
- Update gitignore and env examples

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,11 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# backend
+backend/venv/
+backend/.env
+backend/faiss_index/
+backend/uploads/
+backend/__pycache__/
+backend/rag/__pycache__/
